[package]
name = "testing"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = { version = "0.9.0" }
probe-rs-rtt = "0.4.0"
anyhow = "1.0.33"

[patch.crates-io]
probe-rs = { git = "https://github.com/probe-rs/probe-rs", features = [] }